--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "dev": "vite",
     "build": "npm run typecheck && vite build",
-    "build:demo": "vite build --config vite.demo.config.ts",
+    "build:demo": "cross-env VITE_BASE_PATH=/react-liquid-glass vite build --config vite.demo.config.ts",
     "typecheck": "tsc -p tsconfig.lib.json",
     "lint": "eslint .",
     "test": "vitest run",
@@ -51,14 +51,15 @@
     "react": ">=18.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
-    "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
+    "cross-env": "^10.1.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
