--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "build": "npm run typecheck && vite build",
     "build:demo": "cross-env VITE_BASE_PATH=/react-liquid-glass vite build --config vite.demo.config.ts",
     "typecheck": "tsc -p tsconfig.lib.json",
+    "clean": "bun scripts/rm.js ./dist",
+    "clean:demo": "bun scripts/rm.js ./demo-dist",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -57,6 +59,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "ajv": "^8.17.1",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "cross-env": "^10.1.0",
     "eslint": "^9.36.0",
@@ -69,6 +72,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "npm:rolldown-vite@7.1.14",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^2.1.5"
   },
   "overrides": {
